nginx/03-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  tls:
    certResolver: letsencrypt
    domains:
      - main: nginx.lancastrian.dev
  entryPoints:
  - websecure
  routes:
  - match: Host(`92.27.105.71`,`192.168.1.20`,`nginx.lancastrian.dev`)
    kind: Rule
    priority: 1
    services:
    - name: nginx
      port: 80
